# Rabbitmq_microservices

./: .gitignore
admin/: .env  .env-prod  Dockerfile  consumer.py  docker-compose.yml
admin/admin/: config.py  settings.py
admin/products/: models.py  producer.py  urls.py  views.py
admin/products/migrations/: 0001_initial.py
admin/rabbit/: pyproject.toml
microservice/: .env  .env-prod  Dockerfile  alembic.ini  config.py  consumer.py  crud.py  db.py  docker-compose.yml  main.py  models.py
microservice/micro/: pyproject.toml
microservice/migrations/: env.py
microservice/migrations/versions/: 17ab8c84de3c_add_likes.py  de021151bd26_database_creation.py
