[tool.poetry]
name = "rabbit"
version = "0.1.0"
description = ""
authors = ["vlad <vlad.genyuk@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"
pika = "^1.3.2"
psycopg-binary = "^3.2.1"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
