[tool.poetry]
name = "micro"
version = "0.1.0"
description = ""
authors = ["vlad <vlad.genyuk@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
psycopg-binary = "^3.2.1"
pika = "^1.3.2"
flask-cors = "^4.0.1"
requests = "^2.32.3"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
fastapi = "^0.111.1"
asyncpg = "^0.29.0"
uvicorn = "^0.30.3"
aio-pika = "^9.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
